--- a/ActionCommandGame.Ui.Console/ActionCommandGame.Ui.ConsoleApp.csproj
+++ b/ActionCommandGame.Ui.Console/ActionCommandGame.Ui.ConsoleApp.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ActionCommandGame.Model\ActionCommandGame.Model.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Repository\ActionCommandGame.Repository.csproj" />
+    <ProjectReference Include="..\ActionCommandGame.Sdk\ActionCommandGame.Sdk.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Services\ActionCommandGame.Services.csproj" />
   </ItemGroup>
 
