--- a/ActionCommandGame.Ui.Console/appsettings.json
+++ b/ActionCommandGame.Ui.Console/appsettings.json
@@ -4,6 +4,7 @@
     "CommandPromptText":  "Command>", 
     "ActionCommand": "mine",
     "ActionText": "{0}, you go mining and find...",
-    "DefaultCooldown": 90
+    "DefaultCooldown": 90,
+    "BaseAddress": "https://localhost:7065"
   } 
 }
