binding aint binding :((

--- a/ActionCommandGame.Services/ActionCommandGame.Services.csproj
+++ b/ActionCommandGame.Services/ActionCommandGame.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ActionCommandGame.Model\ActionCommandGame.Model.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Repository\ActionCommandGame.Repository.csproj" />
+    <ProjectReference Include="..\ActionCommandGame.Sdk\ActionCommandGame.Sdk.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Services.Abstractions\ActionCommandGame.Services.Abstractions.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Settings\ActionCommandGame.Settings.csproj" />
   </ItemGroup>
