Add missing info to playerservice

--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "GameName": "Mining Adventure",
+    "CommandPromptText": "Command>",
+    "ActionCommand": "mine",
+    "ActionText": "{0}, you go mining and find...",
+    "DefaultCooldown": 90
+  }
 }
