--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "AppSettings": {
-    "GameName": "Mining Adventure",
-    "CommandPromptText": "Command>",
-    "ActionCommand": "mine",
-    "ActionText": "{0}, you go mining and find...",
-    "DefaultCooldown": 90
-  }
+  "AllowedHosts": "*"
 }
