game theme possibly

--- a/ActionCommandGame.Ui.Console/appsettings.json
+++ b/ActionCommandGame.Ui.Console/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "GameName": "Mining Adventure",
+    "GameName": "Delivery Adventure",
     "CommandPromptText":  "Command>", 
-    "ActionCommand": "mine",
-    "ActionText": "{0}, you go mining and find...",
+    "ActionCommand": "bike",
+    "ActionText": "{0}, you go biking and find...",
     "DefaultCooldown": 90,
     "BaseAddress": "https://localhost:7065"
   } 
