--- a/ActionCommandGame.RestApi/appsettings.json
+++ b/ActionCommandGame.RestApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "JwtSettings": {
+    "Secret": "CpYhPUdVcq7j5JhQ8cLa7Y2VyHr6NMvY",
+    "Expiry": "0.01:00:00"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
