basic player sdk in mvc

--- a/ActionCommandGame.Ui.Mvc/ActionCommandGame.Ui.Mvc.csproj
+++ b/ActionCommandGame.Ui.Mvc/ActionCommandGame.Ui.Mvc.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ActionCommandGame.Model\ActionCommandGame.Model.csproj" />
+    <ProjectReference Include="..\ActionCommandGame.Services\ActionCommandGame.Services.csproj" />
+  </ItemGroup>
+
 </Project>
