appconfig in mvc

--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "AppSettings": {
+    "GameName": "Delivery Adventure",
+    "CommandPromptText":  "Command>", 
+    "ActionCommand": "bike",
+    "ActionText": "{0}, you go biking and find...",
+    "DefaultCooldown": 90,
+    "BaseAddress": "https://localhost:7065"
+  } 
 }
