--- a/ActionCommandGame.Ui.Mvc/ActionCommandGame.Ui.Mvc.csproj
+++ b/ActionCommandGame.Ui.Mvc/ActionCommandGame.Ui.Mvc.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ActionCommandGame.Model\ActionCommandGame.Model.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Services\ActionCommandGame.Services.csproj" />
   </ItemGroup>
