--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "GameName": "Delivery Adventure",
+    "GameName": "Fireman Adventure",
     "CommandPromptText":  "Command>", 
-    "ActionCommand": "bike",
-    "ActionText": "{0}, you go biking and find...",
+    "ActionCommand": "patrol",
+    "ActionText": "{0}, you go on patrol and find...",
     "DefaultCooldown": 90,
     "BaseAddress": "https://localhost:7065"
   } 
