--- a/ActionCommandGame.Sdk/ActionCommandGame.Sdk.csproj
+++ b/ActionCommandGame.Sdk/ActionCommandGame.Sdk.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ActionCommandGame.Model\ActionCommandGame.Model.csproj" />
+    <ProjectReference Include="..\ActionCommandGame.Services.Abstractions\ActionCommandGame.Services.Abstractions.csproj" />
     <ProjectReference Include="..\ActionCommandGame.Services.Model\ActionCommandGame.Services.Model.csproj" />
-    <ProjectReference Include="..\ActionCommandGame.Ui.Mvc\ActionCommandGame.Ui.Mvc.csproj" />
   </ItemGroup>
 
 </Project>
