attempt to go to sqlserver

--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "GameName": "Fireman Adventure",
+    "GameName": "Fire patrol",
     "CommandPromptText":  "Command>", 
     "ActionCommand": "patrol",
     "ActionText": "{0}, you go on patrol and find...",
