--- a/ActionCommandGame.Ui.Console/appsettings.json
+++ b/ActionCommandGame.Ui.Console/appsettings.json
@@ -1,10 +1,11 @@
 {
   "AppSettings": {
     "GameName": "Delivery Adventure",
-    "CommandPromptText":  "Command>", 
+    "CommandPromptText": "Command>",
     "ActionCommand": "bike",
     "ActionText": "{0}, you go biking and find...",
     "DefaultCooldown": 90,
-    "BaseAddress": "https://localhost:7065"
+    "BaseAddress": "https://localhost:7065",
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=FiremanAdventure;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
   } 
 }
