--- a/ActionCommandGame.Ui.Mvc/appsettings.json
+++ b/ActionCommandGame.Ui.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "GameName": "Fire patrol",
+    "GameName": "Firefighter Adventure",
     "CommandPromptText": "Command>",
     "ActionCommand": "patrol",
     "ActionText": "{0}, you go on patrol and find...",
