--- a/ActionCommandGame.RestApi/appsettings.json
+++ b/ActionCommandGame.RestApi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "GameName": "Delivery Adventure",
+    "GameName": "Firefighter Adventure",
     "CommandPromptText": "Command>",
-    "ActionCommand": "bike",
-    "ActionText": "{0}, you go biking and find...",
+    "ActionCommand": "patrol",
+    "ActionText": "{0}, you go on patrol and find...",
     "DefaultCooldown": 90,
     "BaseAddress": "https://localhost:7065",
     "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=FiremanAdventure;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
